Add omnibus module